--- a/AbhiroopBhattacharya_HousingPriceRegression.ipynb
+++ b/AbhiroopBhattacharya_HousingPriceRegression.ipynb
@@ -14,7 +14,8 @@
     "pd.set_option('display.max_rows',None)\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n"
    ]
   },
   {
@@ -1881,7 +1882,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1895,10 +1896,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.5"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
