--- a/AbhiroopBhattacharya_HousingPriceRegression.ipynb
+++ b/AbhiroopBhattacharya_HousingPriceRegression.ipynb
@@ -14,8 +14,7 @@
     "pd.set_option('display.max_rows',None)\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n"
+    "# warnings.filterwarnings('ignore')"
    ]
   },
   {
